--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input bw-checkbox-custom" type="checkbox" name="list_option" id="ukuran2" value="90 x 5 m">
-                <label class="form-check-label bw-label-custom" for="ukuran2">90 x 5 m</label>
+                <label class="form-check-label bw-label-custom" for="ukuran2">90 x 5 cm</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input bw-checkbox-custom" type="checkbox" name="list_option" id="ukuran3" value="90 x 4 cm">
